# triage

./: .ghcid  .gitmodules  Main.hs  Makefile  cabal.project  triage.cabal
etc/: beginner-labels.txt  not-beginner-labels.txt
